--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword"
         content="blissfulhimalaya.com, BLISSFULHIMALAYA.COM, blissfulHimalaya, blissful, blissfulhimalayaofficial, tourism , Uttarakhand , tourism company in Uttarakhand,
     trekking, best place to visit in Uttarakhand, Pithoragarh, munsyari, Askote, chipla-kedar-trek, Darma, darma valley, Mallikarjun mandir, temples,
     camping, best views, adventure, religious,medical tourism, farming tourism, adventure, culture and nature, rural , himalaya, himalayan, travel, village ">
-    <meta name="description" content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
+    <meta name="description"
+        content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
     medical tourism, farming tourism, adventure, culture and nature all together for the best travelling experiences for people who care.  for more information contact +91 7060391584, 7500768536 ,9411502365">
-   
-     <!-- favicon -->
+
+    <!-- favicon -->
 
     <link rel=" apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
@@ -88,9 +89,26 @@
             <li class="active" data-target="#carousel" data-slide-to="0"></li>
             <li data-target="#carousel" data-slide-to="1"></li>
             <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active river">
+            <div class="carousel-item active rivervalle">
+                <div class="container h-100 d-md-block">
+                    <div class="row align-items-center h-100">
+                        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                            <div class="caption animated fadeIn">
+                                <h2 class="animated fadeInLeft">Chipla Kedar Trek</h2>
+                                <p class="animated fadeInRight">Chipla Kedar trek is one of the most exciting and
+                                    challenging, not yet commercialized treks of Kumaon Himalayas of Uttarakhand. The
+                                    trek reaches an altitude of 5200 meters above sea level.
+                                </p>
+                                <a class="animated fadeInUp btn delicious-btn" href="Chiplakedar.html">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item  river">
                 <div class="container h-100 ">
                     <div class="row align-items-center h-100">
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -121,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item rivervalley">
+            <div class="carousel-item rivervalle">
                 <div class="container h-100 d-md-block">
                     <div class="row align-items-center h-100">
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -137,15 +155,15 @@
                     </div>
                 </div>
             </div>
+            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only"></span>
+            </a>
+            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only"></span>
+            </a>
         </div>
-        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
     </div>
 
 
@@ -165,8 +183,10 @@
                     <div id="aboutus">
                         <p>Blissful himalaya is a group of youth from the Himalayas eager to build restful and very
                             interactive
-                            tourism in rural Himalayan villages where the souls from all around the globe could unite
-                            and laminate within and for a better world. We aim to eco tourism, medical tourism, farming
+                            tourism in rural Himalayan villages where the souls from all around the globe could
+                            unite
+                            and laminate within and for a better world. We aim to eco tourism, medical tourism,
+                            farming
                             tourism, adventure,
                             culture and nature all together for the best travelling
                             experiences for people who care. </p>
@@ -256,7 +276,8 @@
                                             </div>
                                             <div class="secondary">
                                                 <p> 6 Day / 5 Night </p>
-                                                <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh.</p>
+                                                <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh.
+                                                </p>
                                                 <p>price : 21000 /- INR</p>
                                                 <a class="btn btn-success" href="Darma Vally.html">Join Us </a>
                                             </div>
@@ -299,6 +320,7 @@
                                             </div>
                                         </div>
                                     </article>
+
                                 </section>
                             </div>
                         </div>
@@ -373,7 +395,7 @@
                     <div class="col-md-6 p-0 col-6 colSet">
                         <a href="Darma Vally.html">
                             <div class="card bg-dark text-white  things">
-                                <img src="./images/things/wildlife.jpg" class="card-img" alt="...">
+                                <img src="./images/things/askot-sanctuary.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay">
                                     <h4 class="card-title">Wildlife / Nature Camping</h4>
 
@@ -547,10 +569,49 @@
                         <div class="secondary">
 
                             <p> 11 Day / 10 Night </p>
-                            <p>Narayan Ashram is situated at an elevation of 2734 metres in the Pithoragarh district.
+                            <p>&nbsp; Narayan Ashram is situated at an elevation of<br>
+                                2734 metres in the Pithoragarh district.
                             </p>
                             <p>price : 30,000 /- INR</p>
                             <a class="btn btn-success" href="Narayan ashram.html">Join Us </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="fancy-card six">
+                    <div class="bg-overlay"></div>
+                    <div class="v-border"></div>
+                    <div class="h-border"></div>
+                    <div class="content">
+                        <div class="primary">
+                            <h2> Askote Wildlife Tour Package</h2>
+                        </div>
+                        <div class="secondary">
+
+                            <p> 8 Day / 7 Night </p>
+                            <p>Askot Wildlife Sanctuary is one of the India's
+                                <br>most famous wildlife sanctuaries and is
+                                rightly known as the 'green paradise of India'.
+                            </p>
+                            <p>price : 25,000 /- INR</p>
+                            <a class="btn btn-success" href="askote wildlife.html">Join Us </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="fancy-card seven">
+                    <div class="bg-overlay"></div>
+                    <div class="v-border"></div>
+                    <div class="h-border"></div>
+                    <div class="content">
+                        <div class="primary">
+                            <h2>Aum Parvat (ॐ) Tour Package</h2>
+                        </div>
+                        <div class="secondary">
+
+                            <p> 13 Day / 12 Night </p>
+                            <p>Aum Parvat is a mountain in the Darchula Pithoragarh District of Uttarakhand.
+                            </p>
+                            <p>price : 30,000 /- INR</p>
+                            <a class="btn btn-success" href="aum%20pravat.html">Join Us </a>
                         </div>
                     </div>
                 </article>
@@ -573,7 +634,8 @@
                     <div class="card-body text-success">
                         <h5 class="card-title">Trekking</h5>
                         <p class="card-text">Trekking is an outdoor activity of walking for more than a day. It is a
-                            form of walking, undertaken with the specific purpose of exploring and enjoying the scenery.
+                            form of walking, undertaken with the specific purpose of exploring and enjoying the
+                            scenery.
                             ... </p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2"></i>
@@ -600,7 +662,8 @@
                     <div class="card-body text-success">
                         <h5 class="card-title">Wildlife</h5>
                         <p class="card-text">Wildlife traditionally refers to undomesticated animal species, but has
-                            come to include all organisms that grow or live wild in an area without being introduced by
+                            come to include all organisms that grow or live wild in an area without being introduced
+                            by
                             humans. ... </p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
@@ -613,7 +676,8 @@
                     </div>
                     <div class="card-body text-success">
                         <h5 class="card-title">Meditation</h5>
-                        <p class="card-text">Meditation isn't about becoming a different person, a new person, or even a
+                        <p class="card-text">Meditation isn't about becoming a different person, a new person, or
+                            even a
                             better person. It's about training in awareness and getting a healthy sense of ...</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
@@ -626,9 +690,11 @@
                     </div>
                     <div class="card-body text-success">
                         <h5 class="card-title">Accomdation</h5>
-                        <p class="card-text">Lodging refers to the renting of a short-term dwelling. People who travel
+                        <p class="card-text">Lodging refers to the renting of a short-term dwelling. People who
+                            travel
                             and stay away from home for more than a day need lodging for sleep, rest, food, safety,
-                            shelter from cold temperatures or rain, storage of luggage and access to common household
+                            shelter from cold temperatures or rain, storage of luggage and access to common
+                            household
                             functions.</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
@@ -642,7 +708,8 @@
                     <div class="card-body text-success">
                         <h5 class="card-title">Eco</h5>
                         <p class="card-text">Eco-friendly literally means earth-friendly or not harmful to the
-                            environment (see References 1). This term most commonly refers to products that contribute
+                            environment (see References 1). This term most commonly refers to products that
+                            contribute
                             to green living or practices that help conserve resources like water and energy.</p>
                         <div class="read-more ">
                             <i class="fas fa-chevron-right mt-2 text-orange-500"></i>
@@ -793,7 +860,8 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <h5>Contact</h5>
                     <ul class="list-unstyled quick-links">
-                        <li><i class="fa fa-map-marker-alt"></i>Bypass Road Near Ramlila Ground, Bhimtal 263136 India
+                        <li><i class="fa fa-map-marker-alt"></i>Bypass Road Near Ramlila Ground, Bhimtal 263136
+                            India
                         </li>
                         <li><i class="fa fa-envelope"></i>Blissfulhimalaya@gmail.com</li>
                         <li><i class="fas fa-phone"></i>+91 7060391584, 7500768536</li>
