--- a/askote wildlife.html
+++ b/askote wildlife.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword"
         content="blissfulhimalaya.com, BLISSFULHIMALAYA.COM, blissfulHimalaya, blissful, blissfulhimalayaofficial, tourism , Uttarakhand , tourism company in Uttarakhand,
     trekking, best place to visit in Uttarakhand, Pithoragarh, munsyari, Askote, chipla-kedar-trek, Darma, darma valley, Mallikarjun mandir, temples,
     camping, best views, adventure, religious,medical tourism, farming tourism, adventure, culture and nature, rural , himalaya, himalayan, travel, village ">
-    <meta name="description" content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
+    <meta name="description"
+        content="Blissful himalaya is a group of youth from the Himalayas eager to build restful and very interactive tourism in rural Himalayan villages where the souls from all around the globe could unite and laminate within and for a better world. We aim to eco tourism, 
     medical tourism, farming tourism, adventure, culture and nature all together for the best travelling experiences for people who care.  for more information contact +91 7060391584, 7500768536 ,9411502365">
-   
+
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,7 +28,7 @@
 
 
     <link rel="stylesheet" href="css/style.css">
-    <title>blissful Himalaya</title>
+    <title>blissful Himalaya | Askote Wildlife Sanctuary Trek </title>
 </head>
 
 <body>
@@ -69,6 +70,7 @@
         </div>
     </nav>
     <!-- end navbar -->
+
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -84,148 +86,175 @@
     </script>
     <!--End of Tawk.to Script-->
 
-    <!-- Trek Packeges -->
-    <div class="wrapper">
-        <div class="Contact my-5" id="Trek-Packages">
-            <h1 class="text-center">TREK PACKAGES</h1>
+    <!-- About-us -->
+    <section id="About-us">
+        <div class="container ">
+            <h1>
+                Askote Wildlife Sanctuary Trek
+            </h1>
+            <h3>(8 Days / 7 Night) </h3>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6">
+
+                    <div class="container pb-4 mt-4">
+                        <div class="carousal2">
+                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="images/image/askot-sanctuary.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/as2.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/image/as1.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div id="aboutus">
+                        <p>Askot Wildlife Sanctuary is one of the India's most famous wildlife sanctuaries and is
+                            rightly known as the 'green paradise of India. Askot Wildlife Sanctuary, with altitude range
+                            from 600 m (2,000 ft) to 6,905 m (22,654 ft) is located in the Pithoragarh district of
+                            Kumaun.<br>
+                            This sanctuary has been set up primarily with the object of conserving the musk
+                            deer (Moschus leucogaster) and its habitat. Intensive efforts have been initiated to
+                            conserve this rare species. Other mammals found in this sanctuary include the Bengal
+                            tiger, Indian leopard, Himalayan jungle cat, civet, barking deer, serow, goral and
+                            Himalayan brown bear. Many species of high altitude birds are also found in this sanctuary.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div>
+                        <p> &nbsp; &nbsp; <b>The famous peaks:</b> Panchchuli, Neodhura, Naukana, Chhiplakot, Najirikot;<b> The
+                            passes:</b> Lipu lekh, Lumpiya lekh and Mankshang lekh: and <b>The religious places:</b> Bhanar,
+                            Chiplakot, Niirikot, Panchachuli, Kalapani and Chota Kailash (Adi Kailash) form a part of
+                            the Sanctuary. The Dhauli and Ikli rivers originate from the area and Gori Ganga passes
+                            through it.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-5">
+                    <div id="aboutus">
+                        <h3>Itinerary</h3>
+                        <p>
+                            <b>Start & End Point -: Haldwani ( Or as you wish)</br>
+                            </b></br>
+
+                            <b>Day 01 :</br>
+                                Drive Haldwani To Askote (250 Km by road).</b></br>
+                            Night stay at Askote.</br></br>
+
+                            <b>Day 02 :</br>
+                                Askote To Ghandhura (Reserve Forest) (15 Km trek).</b></br>
+                            </br>
+
+                            <b>Day 03 :</br>
+                                Ghandhura To Dhamigaon (15 Km trek).</b></br>
+                            </br>
+
+                            <b>Day 04 :</br>
+                                Dhamigaon To Munsyari (20 Km trek).</b></br>
+
+
+
+                            <b>Day 05 :</br>
+                                Munsyari visit:</b></br>
+
+                            Tribal Heritage Museum,Eco Park (Tulip Garden), Thamri Kund etc.</br></br>
+
+                            <b>Day 06 :</br>
+                                Munsyari To Khaliya-Top (Trekking 5-8 km).</b></br></br>
+                            <b>Day 07 :</br>
+                                Khaliya-Top To Askote.</b></br></br>
+                            <b>Day 08 :</br>
+                                Askote To Haldwani.</b></br></br>
+
+                        </p>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <section class="cards cf">
-                <article class="fancy-card one">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Darma Valley Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-                            <p> 6 Day / 5 Night </p>
-                            <p> Darma Valley is located in Munsyari tehsil of the Pithoragarh
-                                (Uttarakhand).</p>
-                            <p>price : 21,000 /- INR</p>
-                            <a class="btn btn-success" href="Darma Vally.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card two">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Khaliya Top Tour Package </h2>
-                        </div>
-                        <div class="secondary">
+    </section>
 
-                            <p> 6 Day / 5 Night </p>
-                            <p> Khaliya Top is a meandering meadow surrounded by snowy peaks with
-                                view of kumaun.</p>
-                            <p>price : 21,000 /- INR</p>
-                            <a class="btn btn-success" href="khalia-trek.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card three">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Chipla kedar Tour Package</h2>
-                        </div>
-                        <div class="secondary">
+    <div class="row container my-2 p-2 Inclusions ">
+        <div class="col-sm-4 col-md-6 col-lg-4 ">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center">Inclusions </h3>
+                    <ul>
+                        <li>Love , Support , Care with Blessing of Himalayas.</li>
+                        <li>Transportation(Pick/Drop).</li>
+                        <li>Accomedations(staying/camping).</li>
+                        <li>Fooding(All Meals/Water).</li>
+                        <li>Wildlife fee & Innerline permits.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Activities </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Bonfire.</li>
+                        <li>Camping.</li>
+                        <li>Trekking.</li>
+                        <li>Sightseeing.</li>
 
-                            <p> 9 Day / 8 Night </p>
-                            <p>Chipla Keda is one of the most exciting and challenging trek of
-                                kumaun.
-                            </p>
-                            <p>price : 25,000 /- INR</p>
-                            <a class="btn btn-success" href="Chiplakedar.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card four">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Mallikarjun Mandir (Askote) Tour Package</h2>
-                        </div>
-                        <div class="secondary">
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title text-center"> Things To Carry </h3>
+                    <p class="card-text">
+                    <ul>
+                        <li>Warm Clothes.</li>
+                        <li>Rain Coat.</li>
+                        <li>Comfortable Clothes.</li>
+                        <li>Comfortable Trekking Shoes with Good Grip.</li>
+                        <li>Personal And Basic medications (Or prescribed If Any) .</li>
 
-                            <p> 11 Day / 10 Night </p>
-                            <p>Amazing Shivling on which cow surreptitiously offered its milk.
-                            </p>
-                            <p>price : 30,000 /- INR</p>
-                            <a class="btn btn-success" href="Mallikarjun mandir.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                
-                <article class="fancy-card five">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Narayan Ashram (Askote) Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 11 Day / 10 Night </p>
-                            <p>&nbsp; Narayan Ashram is situated at an elevation of<br>
-                                2734 metres in the Pithoragarh district.
-                            </p>
-                            <p>price : 30,000 /- INR</p>
-                            <a class="btn btn-success" href="Narayan ashram.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card six">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2> Askote Wildlife Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 8 Day / 7 Night </p>
-                            <p>Askot Wildlife Sanctuary is one of the India's
-                                <br>most famous wildlife sanctuaries and  is
-                                rightly known as the 'green paradise of India'.
-                            </p>
-                            <p>price : 25,000 /- INR</p>
-                            <a class="btn btn-success" href="askote wildlife.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <article class="fancy-card seven">
-                    <div class="bg-overlay"></div>
-                    <div class="v-border"></div>
-                    <div class="h-border"></div>
-                    <div class="content">
-                        <div class="primary">
-                            <h2>Aum Parvat Tour Package</h2>
-                        </div>
-                        <div class="secondary">
-
-                            <p> 13 Day / 12 Night </p>
-                            <p>Aum Parvat is a mountain in the Darchula Pithoragarh District of Uttarakhand.
-                            </p>
-                            <p>price : 30,000 /- INR</p>
-                            <a class="btn btn-success" href="aum%20pravat.html">Join Us </a>
-                        </div>
-                    </div>
-                </article>
-                <a class="btn btn-success mx-auto" href="packages.html">More Packages</a>
-            </section>
+                    </ul>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-
     <!-- Footer -->
     <!-- Footer -->
     <section id="footer" class="bg-success">
